--- a/src/App.sass
+++ b/src/App.sass
@@ -392,6 +392,8 @@ footer
     right: 0.2rem
 
 
+
+
 /* Home */
 
 .home-page-container
@@ -759,3 +761,45 @@ form
   transition: all 0.5s
   &:hover 
     background-color: $lightGreen
+
+
+  /* Error modal */
+
+.error-modal
+  display: flex
+  align-items: center
+  justify-content: center
+  flex-direction: column
+  position: fixed
+  top: 6rem
+  left: 0
+  right: 0
+  width: inherit
+  height: 100%
+  z-index: 1050
+  background-color: rgba(0, 0, 0, 0.7)
+  backdrop-filter: blur(15px)
+
+.error-modal-box
+  text-align: center
+  width: 40%
+  padding: 1.5rem 2rem 2rem 2rem
+  background-color: $white
+  border: solid 1px $dark
+  h2
+    margin-bottom: 3rem
+
+.error-modal-button 
+  display: inline-block
+  text-decoration: none
+  font-size: 0.9rem
+  color: $black
+  padding: 0.3rem 0.8rem
+  border: solid 2px $lightGreen
+  margin:
+    right: 0.5rem
+    left: 0.5rem
+  transition: all 1s
+  &:hover 
+    background-color: $lightGreen
+    color: $white
