--- a/src/App.css
+++ b/src/App.css
@@ -110,10 +110,10 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 4.2rem;
-  margin-right: 4.2rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  margin-left: 4.2rem;
+  margin-right: 4.2rem;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -154,9 +154,9 @@ nav {
   height: 1.26rem;
   background: #eeecec;
   padding: 0;
+  border-radius: 50% 0 0 50%;
   margin-top: 0.27rem;
   margin-left: 0.27rem;
-  border-radius: 50% 0 0 50%;
 }
 
 .logo-letter-g-outline {
@@ -171,18 +171,18 @@ nav {
   height: 1.26rem;
   background-color: #eeecec;
   padding: 0;
+  border-radius: 0 50% 50% 0;
   margin-top: 0.27rem;
   margin-right: 0.45rem;
   margin-left: 0;
-  border-radius: 0 50% 50% 0;
 }
 
 .logo-letter-g-box {
   width: 0.27rem;
   height: 0.63rem;
   background-color: #eeecec;
-  margin-bottom: 0;
   padding-top: 0.63rem;
+  margin-bottom: 0;
 }
 
 .logo-letter-g-box2 {
@@ -215,8 +215,8 @@ nav {
 
 .navigation-link {
   font-size: 1rem;
-  display: inline-block;
   text-decoration: none;
+  display: inline-block;
   background-color: rgba(0, 0, 0, 0);
   color: #eeecec;
   padding: 0.3rem 0.8rem;
@@ -248,9 +248,8 @@ nav {
   width: inherit;
   height: 100%;
   z-index: 1050;
-  background-color: black;
-  color: #eeecec;
   background-color: rgba(0, 0, 0, 0.7);
+  color: #eeecec;
   backdrop-filter: blur(15px);
 }
 
@@ -286,11 +285,11 @@ nav {
 }
 
 .menu-subcontainer {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-align: center;
   margin-top: 0;
 }
 
@@ -412,10 +411,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 4.2rem;
-  margin-right: 4.2rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  margin-left: 4.2rem;
+  margin-right: 4.2rem;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
@@ -477,9 +476,9 @@ footer {
   height: 5.6rem;
   background: #eeecec;
   padding: 0;
+  border-radius: 50% 0 0 50%;
   margin-top: 1.2rem;
   margin-left: 1.2rem;
-  border-radius: 50% 0 0 50%;
 }
 
 .home-logo-letter-g-outline {
@@ -494,18 +493,18 @@ footer {
   height: 5.6rem;
   background-color: #eeecec;
   padding: 0;
+  border-radius: 0 50% 50% 0;
   margin-top: 1.2rem;
   margin-right: 2rem;
   margin-left: 0;
-  border-radius: 0 50% 50% 0;
 }
 
 .home-logo-letter-g-box {
   width: 1.2rem;
   height: 2.8rem;
   background-color: #eeecec;
-  margin-bottom: 0;
   padding-top: 2.8rem;
+  margin-bottom: 0;
 }
 
 .home-logo-letter-g-box2 {
@@ -574,10 +573,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 4rem;
-  margin-bottom: 3rem;
-  margin-left: 2.2rem;
-  margin-right: 2.2rem;
+  margin: 4rem 2.2rem 3rem 2.2rem;
 }
 
 .project-details-container {
@@ -620,9 +616,9 @@ footer {
 }
 
 .project-try-it-link {
-  display: inline-block;
   text-decoration: none;
   font-size: 0.9rem;
+  display: inline-block;
   color: #eeecec;
   padding: 0.3rem 0.8rem;
   border: solid 2px #32a852;
@@ -636,9 +632,9 @@ footer {
 }
 
 .project-github-link {
-  display: inline-block;
   text-decoration: none;
   font-size: 0.9rem;
+  display: inline-block;
   color: #eeecec;
   padding: 0.3rem 0.8rem;
   border: solid 2px #3271a8;
@@ -685,11 +681,11 @@ footer {
 }
 
 .contact-container {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-align: center;
   width: 30rem;
   background-color: #0f0f0f;
   color: #eeecec;
@@ -846,9 +842,9 @@ form h3 {
 }
 
 .page-not-found-get-back-link {
-  display: inline-block;
   text-decoration: none;
   font-size: 0.9rem;
+  display: inline-block;
   color: #eeecec;
   padding: 0.3rem 0.8rem;
   border: solid 2px #32a852;
@@ -863,26 +859,26 @@ form h3 {
 }
 
 .error-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  position: fixed;
-  top: 6rem;
-  left: 0;
-  right: 0;
   width: inherit;
   height: 100%;
-  z-index: 1050;
+  z-index: 1020;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(15px);
 }
 
 .error-modal-box {
   text-align: center;
-  width: 40%;
-  padding: 1.5rem 2rem 2rem 2rem;
+  width: 50%;
   background-color: #eeecec;
+  padding: 1.5rem 2rem 2rem 2rem;
   border: solid 1px #282828;
 }
 
@@ -891,9 +887,9 @@ form h3 {
 }
 
 .error-modal-button {
-  display: inline-block;
   text-decoration: none;
   font-size: 0.9rem;
+  display: inline-block;
   color: black;
   padding: 0.3rem 0.8rem;
   border: solid 2px #32a852;
@@ -905,5 +901,9 @@ form h3 {
 .error-modal-button:hover {
   background-color: #32a852;
   color: #eeecec;
+}
+
+.fade-error-modal-in {
+  animation: fade-page-in 0.5s forwards;
 }
 /*# sourceMappingURL=App.css.map */
