--- a/src/App.sass
+++ b/src/App.sass
@@ -105,12 +105,12 @@ nav
   display: flex
   justify-content: space-between
   align-items: center
-  margin:
-    left: 4.2rem
-    right: 4.2rem
   padding:
     top: 0.5rem
     bottom: 0.5rem
+  margin:
+    left: 4.2rem
+    right: 4.2rem
 
 @media (min-width: 320px) and (max-width: 480px)
   .navbar-container
@@ -146,10 +146,10 @@ nav
   height: 1.26rem
   background: $white
   padding: 0
+  border-radius: 50% 0 0 50%
   margin:
     top: 0.27rem
-    left: 0.27rem
-  border-radius: 50% 0 0 50%
+    left: 0.27rem  
 
 .logo-letter-g-outline
   width: 1.44rem
@@ -162,18 +162,18 @@ nav
   height: 1.26rem
   background-color: $white
   padding: 0
+  border-radius: 0 50% 50% 0
   margin:
     top: 0.27rem
     right: 0.45rem
     left: 0
-  border-radius: 0 50% 50% 0
 
 .logo-letter-g-box
   width: 0.27rem
   height: 0.63rem
   background-color: $white
-  margin-bottom: 0
   padding-top: 0.63rem
+  margin-bottom: 0
 
 .logo-letter-g-box2
   width: 0.25rem
@@ -201,8 +201,8 @@ nav
 
 .navigation-link
   font-size: 1rem
-  display: inline-block
   text-decoration: none
+  display: inline-block
   background-color: rgba(0,0,0,0)
   color: $white
   padding: 0.3rem 0.8rem
@@ -231,9 +231,8 @@ nav
   width: inherit
   height: 100%
   z-index: 1050
-  background-color: black
-  color: $white
   background-color: rgba(0, 0, 0, 0.7)
+  color: $white
   backdrop-filter: blur(15px)
   
 .fade-menu-in
@@ -261,11 +260,11 @@ nav
   margin-top: 2.5rem
 
 .menu-subcontainer
+  text-align: center
   display: flex
   justify-content: center
   align-items: center
   flex-direction: column
-  text-align: center
   margin-top: 0
   
 .menu-subcontainer li
@@ -317,23 +316,27 @@ nav
 
 @media (min-width: 320px) and (max-width: 480px)
   .headline
-    margin-left: 2rem
-    margin-right: 3rem
+    margin:
+      left: 2rem
+      right: 3rem
 
 .header-text
   display: flex
   justify-content: center
   flex-direction: column
-  padding-top: 1rem
-  padding-bottom: 1.7rem
-  padding-left: 1rem
+  padding:
+    top: 1rem
+    bottom: 1.7rem
+    left: 1rem
   margin-left: 3rem
   h1
-    margin-top: 0
-    margin-bottom: 0.5rem
+    margin:
+      top: 0
+      bottom: 0.5rem
   h2
-    margin-top: 0
-    margin-bottom: 0
+    margin:
+      top: 0
+      bottom: 0
 
 @media (min-width: 320px) and (max-width: 480px)
   .header-text
@@ -362,12 +365,12 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  margin:
-    left: 4.2rem
-    right: 4.2rem
   padding:
     top: 0.5rem
     bottom: 0.5rem
+  margin:
+    left: 4.2rem
+    right: 4.2rem
 
 @media (min-width: 320px) and (max-width: 767px)
   .footer-container 
@@ -390,8 +393,6 @@ footer
   margin:
     left: 0.2rem
     right: 0.2rem
-
-
 
 
 /* Home */
@@ -426,10 +427,10 @@ footer
   height: 5.6rem
   background: $white
   padding: 0
+  border-radius: 50% 0 0 50%
   margin:
     top: 1.2rem
     left: 1.2rem
-  border-radius: 50% 0 0 50%
 
 .home-logo-letter-g-outline
   width: 6rem
@@ -442,18 +443,18 @@ footer
   height: 5.6rem
   background-color: $white
   padding: 0
+  border-radius: 0 50% 50% 0
   margin:
     top: 1.2rem
     right: 2rem
     left: 0
-  border-radius: 0 50% 50% 0
-
+  
 .home-logo-letter-g-box
   width: 1.2rem
   height: 2.8rem
   background-color: $white
-  margin-bottom: 0
   padding-top: 2.8rem
+  margin-bottom: 0
 
 .home-logo-letter-g-box2
   width: 1.2rem
@@ -514,11 +515,7 @@ footer
   justify-content: space-around
   align-items: center
   flex-wrap: wrap
-  margin:
-    top: 4rem
-    bottom: 3rem
-    left: 2.2rem
-    right: 2.2rem
+  margin: 4rem 2.2rem 3rem 2.2rem
 
 .project-details-container
   display: flex
@@ -556,10 +553,10 @@ footer
     bottom: 1.5rem
   padding-bottom: 1.5rem
   
-.project-try-it-link  
-  display: inline-block
+.project-try-it-link
   text-decoration: none
   font-size: 0.9rem
+  display: inline-block
   color: $white
   padding: 0.3rem 0.8rem
   border: solid 2px $lightGreen
@@ -571,9 +568,9 @@ footer
     background-color: $lightGreen
 
 .project-github-link  
-  display: inline-block
   text-decoration: none
   font-size: 0.9rem
+  display: inline-block
   color: $white
   padding: 0.3rem 0.8rem
   border: solid 2px $blue
@@ -614,12 +611,12 @@ footer
   margin-top: 8rem
   animation: fade-page-in 1s forwards
 
-.contact-container 
+.contact-container
+  text-align: center
   display: flex
   justify-content: center
   align-items: center
   flex-direction: column
-  text-align: center
   width: 30rem
   background-color: $dark2
   color: $white
@@ -678,12 +675,13 @@ footer
       top: 0rem
       bottom: 0.7rem
 
-.contact-link a 
-  text-decoration: none
-  color: $blue2
-  transition: all 0.5s
-  &:hover 
-    color: $light-blue
+.contact-link 
+  a 
+    text-decoration: none
+    color: $blue2
+    transition: all 0.5s
+    &:hover 
+      color: $light-blue
 
 form
   display: flex
@@ -749,9 +747,9 @@ form
   margin: 4rem
 
 .page-not-found-get-back-link 
-  display: inline-block
   text-decoration: none
   font-size: 0.9rem
+  display: inline-block
   color: $white
   padding: 0.3rem 0.8rem
   border: solid 2px $lightGreen
@@ -766,33 +764,33 @@ form
   /* Error modal */
 
 .error-modal
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
   display: flex
   align-items: center
   justify-content: center
   flex-direction: column
-  position: fixed
-  top: 6rem
-  left: 0
-  right: 0
   width: inherit
   height: 100%
-  z-index: 1050
+  z-index: 1020
   background-color: rgba(0, 0, 0, 0.7)
   backdrop-filter: blur(15px)
 
 .error-modal-box
   text-align: center
-  width: 40%
-  padding: 1.5rem 2rem 2rem 2rem
+  width: 50%
   background-color: $white
+  padding: 1.5rem 2rem 2rem 2rem
   border: solid 1px $dark
   h2
     margin-bottom: 3rem
 
 .error-modal-button 
-  display: inline-block
   text-decoration: none
   font-size: 0.9rem
+  display: inline-block
   color: $black
   padding: 0.3rem 0.8rem
   border: solid 2px $lightGreen
@@ -803,3 +801,7 @@ form
   &:hover 
     background-color: $lightGreen
     color: $white
+
+.fade-error-modal-in
+  animation: fade-page-in 0.5s forwards
+  
