Error modal priority changed

--- a/src/App.css
+++ b/src/App.css
@@ -869,7 +869,7 @@ form h3 {
   flex-direction: column;
   width: inherit;
   height: 100%;
-  z-index: 1020;
+  z-index: 1070;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(15px);
 }
@@ -884,6 +884,12 @@ form h3 {
 
 .error-modal-box h2 {
   margin-bottom: 3rem;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .error-modal-box {
+    width: 60%;
+  }
 }
 
 .error-modal-button {
