--- a/src/App.sass
+++ b/src/App.sass
@@ -1,17 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@200;300&display=swap")
 
-$white: rgb(238, 236, 236)
-$dark: rgb(40,40,40)
-$dark2: rgb(15,15,15)
 $black: rgb(0,0,0)
-$lightGreen: rgb(50, 168, 82)
-$blue: rgb(50, 113, 168)
-$blue2: rgb(31,	111,225)
-$light-blue: rgb(126, 172, 252)
+$dark: rgb(15,15,15)
+$dark-grey: rgb(40,40,40)
 $light-grey: rgb(84,84, 84)
+$white: rgb(238, 236, 236)
+$dark-blue: rgb(31,	111,225)
+$blue: rgb(50, 113, 168)
+$light-blue: rgb(126, 172, 252)
 $violet: rgb(147, 61, 186)
 $orange: rgb(255,165,0)
 $red: rgb(255,0,0)
+$light-green: rgb(50, 168, 82)
 
 
 html, 
@@ -28,13 +28,13 @@ body
 
 /* Main classes */
 
-.is-text-large-size
+.is-text-small-size
   font-size: 2rem
 
 .is-text-medium-size
   font-size: 2.5rem
 
-.is-text-xlarge-size
+.is-text-large-size
   font-size: 3.1rem
 
 .is-text-bold
@@ -125,7 +125,7 @@ nav
   flex-direction: column
   width: max-content
   height: 5rem
-  white-space: nowrap;
+  white-space: nowrap
   padding: 0
 
 .logo-subcontainer
@@ -267,8 +267,9 @@ nav
   flex-direction: column
   margin-top: 0
   
-.menu-subcontainer li
-  margin-bottom: 2rem
+.menu-subcontainer
+  li
+    margin-bottom: 2rem
 
 .menu-link
   text-decoration: none
@@ -343,10 +344,10 @@ nav
     margin-left: 2rem
 
 .is-border-blue
-  border-left: solid $blue2 10px
+  border-left: solid $dark-blue 10px
 
 .is-border-green
-  border-left: solid $lightGreen 10px
+  border-left: solid $light-green 10px
 
 .is-border-orange
   border-left: solid $orange 10px
@@ -497,7 +498,7 @@ footer
 
 .about-contact-link a 
   text-decoration: none
-  color: $blue2
+  color: $dark-blue
   transition: all 0.5s
   &:hover 
     color: $light-blue
@@ -521,7 +522,7 @@ footer
   display: flex
   align-items: center
   flex-direction: column
-  background-color: $dark2
+  background-color: $dark
   border: solid 1px $dark
   margin: 0 1.5rem 1rem 1.5rem
 
@@ -559,13 +560,13 @@ footer
   display: inline-block
   color: $white
   padding: 0.3rem 0.8rem
-  border: solid 2px $lightGreen
+  border: solid 2px $light-green
   margin:
     right: 0.5rem
     left: 0.5rem
   transition: all 1s
   &:hover 
-    background-color: $lightGreen
+    background-color: $light-green
 
 .project-github-link  
   text-decoration: none
@@ -618,7 +619,7 @@ footer
   align-items: center
   flex-direction: column
   width: 30rem
-  background-color: $dark2
+  background-color: $dark
   color: $white
   padding: 0
   border: solid 1px $dark
@@ -678,7 +679,7 @@ footer
 .contact-link 
   a 
     text-decoration: none
-    color: $blue2
+    color: $dark-blue
     transition: all 0.5s
     &:hover 
       color: $light-blue
@@ -720,11 +721,11 @@ form
   background-color: black
   color: $white
   padding: 0.3rem 0.8rem
-  border: solid 2px $lightGreen
+  border: solid 2px $light-green
   margin-bottom: 1.5rem
   transition: all 0.5s
   &:hover 
-    background-color: $lightGreen
+    background-color: $light-green
 
 .error-output
   text-align: center
@@ -742,8 +743,8 @@ form
   display: flex
   justify-content: center
   align-items: center
-  background-color: $dark2
-  border: solid $dark 1px
+  background-color: $dark
+  border: solid $dark-grey 1px
   margin: 4rem
 
 .page-not-found-get-back-link 
@@ -752,13 +753,13 @@ form
   display: inline-block
   color: $white
   padding: 0.3rem 0.8rem
-  border: solid 2px $lightGreen
+  border: solid 2px $light-green
   margin:
     top: 2rem
     bottom: 2rem
   transition: all 0.5s
   &:hover 
-    background-color: $lightGreen
+    background-color: $light-green
 
 
   /* Error modal */
@@ -797,13 +798,13 @@ form
   display: inline-block
   color: $black
   padding: 0.3rem 0.8rem
-  border: solid 2px $lightGreen
+  border: solid 2px $light-green
   margin:
     right: 0.5rem
     left: 0.5rem
   transition: all 1s
   &:hover 
-    background-color: $lightGreen
+    background-color: $light-green
     color: $white
 
 .fade-error-modal-in
