--- a/src/App.sass
+++ b/src/App.sass
@@ -4,11 +4,11 @@ $black: rgb(0,0,0)
 $dark: rgb(15,15,15)
 $dark-grey: rgb(40,40,40)
 $light-grey: rgb(84,84, 84)
-$white: rgb(238, 236, 236)
-$dark-blue: rgb(31,	111,225)
-$blue: rgb(50, 113, 168)
-$light-blue: rgb(126, 172, 252)
-$violet: rgb(147, 61, 186)
+$white: rgb(238,236,236)
+$dark-blue: rgb(31,111,225)
+$blue: rgb(50,113,168)
+$light-blue: rgb(126,172,252)
+$violet: rgb(147,61,186)
 $orange: rgb(255,165,0)
 $red: rgb(255,0,0)
 $light-green: rgb(50, 168, 82)
