--- a/src/App.sass
+++ b/src/App.sass
@@ -220,6 +220,17 @@ nav
   list-style: none
   padding-left: 0
 
+.select-language
+  font-size: 1rem
+  background-color: rgba(0,0,0,0)
+  color: $white
+  padding: 0.5rem 0.8rem 0.3rem 0.8rem
+  margin-left: 0.8rem
+  border: none
+  option
+    background-color: $white
+    color: $black
+
 
 /* Menu */
 
@@ -266,43 +277,58 @@ nav
   align-items: center
   flex-direction: column
   margin-top: 0
-  
-.menu-subcontainer
   li
-    margin-bottom: 2rem
+    margin-bottom: 1.4rem
 
-.menu-link
+.menu-select-language
+  font-size: 1.2rem
+  background-color: transparent
+  padding: 0.2rem 0.8rem 0.3rem 0.8rem
+  margin-top: 0rem
+  margin-left: 0.8rem
+  border: none
+  option
+    background-color: $black
+    color: $orange
+
+.menu-item
   text-decoration: none
 
-.menu-link-fade-in-speed1
+.menu-item-fade-in-speed1
   animation: zoom-text-in 0.1s forwards
 
-.menu-link-fade-in-speed2
+.menu-item-fade-in-speed2
   animation: zoom-text-in 0.25s forwards
 
-.menu-link-fade-in-speed3
+.menu-item-fade-in-speed3
   animation: zoom-text-in 0.5s forwards
 
-.menu-link-fade-in-speed4
+.menu-item-fade-in-speed4
   animation: zoom-text-in 1s forwards
 
-.menu-link-fade-in-speed5
+.menu-item-fade-in-speed5
   animation: zoom-text-in 1.2s forwards
 
-.menu-link-fade-out-speed1
+.menu-item-fade-in-speed6
+  animation: zoom-text-in 1.4s forwards
+
+.menu-item-fade-out-speed1
   animation: zoom-text-out 0.05s forwards
 
-.menu-link-fade-out-speed2
+.menu-item-fade-out-speed2
   animation: zoom-text-out 0.1s forwards
 
-.menu-link-fade-out-speed3
+.menu-item-fade-out-speed3
   animation: zoom-text-out 0.25s forwards
 
-.menu-link-fade-out-speed4
+.menu-item-fade-out-speed4
   animation: zoom-text-out 0.5s forwards
 
-.menu-link-fade-out-speed5
+.menu-item-fade-out-speed5
   animation: zoom-text-out 1s forwards
+
+.menu-item-fade-out-speed6
+  animation: zoom-text-out 1.5s forwards
 
 .blur-in
   animation: blur-element-in 1.5s forwards
@@ -520,13 +546,17 @@ footer
 
 .project-details-container
   display: flex
+  justify-content: space-between
   align-items: center
   flex-direction: column
   background-color: $dark
+  width: 22rem
+  height: 30rem
   border: solid 1px $dark
-  margin: 0 1.5rem 1rem 1.5rem
+  margin: 0 1.5rem 1.5rem 1.5rem
 
 .project-description
+  height: 11rem
   color: $white
   padding:
     left: 1rem
@@ -534,11 +564,10 @@ footer
   article
     p
       font-size: 1rem
-      width: 280px
+      width: 17.5rem
     header
       h2
-        font-size: 1.7rem 
-        margin: 1.6rem 0 0.6rem 0
+        margin: 0 0 0.6rem 0
 
 .project-description-container
   p
@@ -546,12 +575,12 @@ footer
 
 .project-links-container 
   display: flex
-  justify-content: space-around
+  justify-content: space-between
   align-items: center
   flex-wrap: wrap
   margin:
     top: 0
-    bottom: 1.5rem
+    bottom: 1rem
   padding-bottom: 1.5rem
   
 .project-try-it-link
@@ -809,4 +838,3 @@ form
 
 .fade-error-modal-in
   animation: fade-page-in 0.5s forwards
-  
