--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: "Roboto-Medium";
-  src: url("./fonts/Roboto/Roboto-Medium.ttf") format("truetype");
+  font-family: "Roboto-Regular";
+  src: url("./fonts/Roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: "Roboto-Medium";
+  font-family: "Roboto-Regular";
   font-size: 16px;
 }
