--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @font-face {
-  font-family: "Roboto-Regular";
-  src: url("./fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+  font-family: "SourceSansPro-SemiBold";
+  src: url("./fonts/SourceSansPro/SourceSansPro-SemiBold.ttf")
+    format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: "Roboto-Regular";
+  font-family: "SourceSansPro-SemiBold";
   font-size: 16px;
 }
