--- a/src/App.css
+++ b/src/App.css
@@ -102,9 +102,9 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100%;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
   color: #eeecec;
   backdrop-filter: blur(15px);
 }
@@ -261,11 +261,10 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  width: inherit;
+  width: 100%;
   height: 100%;
   z-index: 5;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
   color: #eeecec;
   backdrop-filter: blur(15px);
 }
@@ -904,15 +903,14 @@ form h3 {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: inherit;
+  width: 100%;
   height: 100%;
   z-index: 7;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(15px);
 }
 
