--- a/src/App.sass
+++ b/src/App.sass
@@ -96,9 +96,9 @@ nav
   position: fixed
   top: 0
   left: 0
-  right: 0
+  width: 100%
   z-index: 3
-  background-color: rgba(0,0,0,0.7)
+  background-color: rgba(0,0,0,0.4)
   color: $white
   backdrop-filter: blur(15px)
     
@@ -239,11 +239,10 @@ nav
   position: fixed
   top: 0
   left: 0
-  right: 0
-  width: inherit
+  width: 100%
   height: 100%
   z-index: 5
-  background-color: rgba(0, 0, 0, 0.7)
+  background-color: rgba(0, 0, 0, 0.4)
   color: $white
   backdrop-filter: blur(15px)
   
@@ -798,15 +797,14 @@ form
   position: fixed
   top: 0
   left: 0
-  right: 0
   display: flex
   align-items: center
   justify-content: center
   flex-direction: column
-  width: inherit
+  width: 100%
   height: 100%
   z-index: 7
-  background-color: rgba(0, 0, 0, 0.7)
+  background-color: rgba(0, 0, 0, 0.4)
   backdrop-filter: blur(15px)
 
 .error-modal-box
