--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,6 +44,7 @@
   font-weight: normal;
   font-style: normal;
 }
+/* Colors */
 body {
   background-color: rgb(0, 0, 0);
   height: 100%;
@@ -54,6 +55,7 @@ body {
   margin: 0;
 }
 
+/* Colors */
 .contact-form {
   display: flex;
   justify-content: center;
@@ -102,6 +104,7 @@ body {
   background-color: rgb(50, 168, 82);
 }
 
+/* Colors */
 .contact-link {
   text-decoration: none;
   color: rgb(31, 111, 225);
@@ -112,6 +115,7 @@ body {
   color: rgb(126, 172, 252);
 }
 
+/* Colors */
 .error-message {
   margin-top: 1rem;
   text-align: center;
@@ -120,6 +124,7 @@ body {
   color: rgb(255, 0, 0);
 }
 
+/* Colors */
 .footer {
   display: flex;
   justify-content: center;
@@ -168,6 +173,7 @@ body {
   }
 }
 
+/* Colors */
 .header-text {
   display: flex;
   justify-content: center;
@@ -212,46 +218,7 @@ body {
   border-left: solid rgb(147, 61, 186) 10px;
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .home-logo {
   display: flex;
   background-color: rgb(238, 236, 236);
@@ -307,46 +274,7 @@ body {
   padding-top: 2.8rem;
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .modal-body {
   position: fixed;
   top: 0;
@@ -395,6 +323,7 @@ body {
   color: rgb(238, 236, 236);
 }
 
+/* Colors */
 .nav-bar {
   position: fixed;
   top: 0;
@@ -424,6 +353,7 @@ body {
   }
 }
 
+/* Colors */
 .nav-bar-logo {
   display: flex;
   background-color: rgb(238, 236, 236);
@@ -476,6 +406,7 @@ body {
   padding-top: 0.63rem;
 }
 
+/* Colors */
 .nav-desktop-items {
   display: flex;
   justify-content: space-between;
@@ -526,46 +457,7 @@ body {
   color: rgb(238, 236, 236);
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .nav-menu {
   position: fixed;
   top: 0;
@@ -665,6 +557,7 @@ body {
   margin-top: 2.5rem;
 }
 
+/* Colors */
 .nav-toggler {
   background: transparent;
   color: rgb(238, 236, 236);
@@ -673,6 +566,7 @@ body {
   margin-top: 0.5rem;
 }
 
+/* Colors */
 .project-details {
   display: flex;
   justify-content: space-between;
@@ -737,46 +631,7 @@ body {
   background-color: rgb(50, 113, 168);
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .about {
   display: flex;
   flex-direction: column;
@@ -817,46 +672,7 @@ body {
   color: rgb(126, 172, 252);
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .contact {
   color: rgb(238, 236, 236);
   margin-top: 8rem;
@@ -905,46 +721,7 @@ body {
   margin-bottom: 0;
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .home {
   display: flex;
   justify-content: center;
@@ -957,46 +734,7 @@ body {
   margin-bottom: 8rem;
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .not-found {
   color: rgb(238, 236, 236);
   margin-top: 8rem;
@@ -1025,46 +763,7 @@ body {
   background-color: rgb(50, 168, 82);
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .projects {
   color: rgb(238, 236, 236);
   margin-top: 8rem;
@@ -1078,46 +777,7 @@ body {
   margin: 4rem 2.2rem 3rem 2.2rem;
 }
 
-@keyframes fade-page-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fade-page-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes zoom-text-in {
-  from {
-    font-size: 0;
-  }
-  to {
-    font-size: 100%;
-  }
-}
-@keyframes zoom-text-out {
-  from {
-    font-size: 100%;
-  }
-  to {
-    font-size: 0;
-  }
-}
-@keyframes blur-element-in {
-  from {
-    filter: blur(100px);
-  }
-  to {
-    filter: blur(0px);
-  }
-}
+/* Colors */
 .tech-stack {
   color: rgb(238, 236, 236);
   margin-top: 8rem;
